--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
         font-family: 'Inter', sans-serif;
         background-color: #f0f2f5;
         margin: 0;
+        padding: 0;
+        width: 100vw;
+        height: 100vh;
+        overflow: auto;
+      }
+      #root {
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
-        overflow: hidden;
+        padding: 20px;
+        box-sizing: border-box;
       }
       /* Samsung One UI specific transitions */
       .oneui-card {
